--- a/catalog.html
+++ b/catalog.html
@@ -169,8 +169,8 @@
           <li class="product-item">
             <div class="selection-menu">
               <img src="img/itemc1.jpg" width="360" height="380" alt="Любительская селфи-палка">
-              <button class="button cart" type="button">В корзину</button>
-              <button class="compare-button" type="button" name="button">Добавить к сравнению</button>
+              <a class="button cart" href="#">В корзину</a>
+              <a class="compare-button" href="#">Добавить к сравнению</a>
             </div>
             <a href="#">
               <h4>Любительская селфи-палка</h4>
@@ -180,8 +180,8 @@
           <li class="product-item">
             <div class="selection-menu">
               <img src="img/itemc2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
-              <button class="button cart" type="button">В корзину</button>
-              <button class="compare-button" type="button" name="button">Добавить к сравнению</button>
+              <a class="button cart" href="#">В корзину</a>
+              <a class="compare-button" href="#">Добавить к сравнению</a>
             </div>
             <a href="#">
               <h4>Профессиональная селфи-палка</h4>
@@ -191,8 +191,8 @@
           <li class="product-item">
             <div class="selection-menu">
               <img src="img/itemc3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
-              <button class="button cart" type="button">В корзину</button>
-              <button class="compare-button" type="button" name="button">Добавить к сравнению</button>
+              <a class="button cart" href="#">В корзину</a>
+              <a class="compare-button" href="#">Добавить к сравнению</a>
             </div>
             <a href="#">
               <h4>Непотопляемая селфи-палка</h4>
@@ -202,8 +202,8 @@
           <li class="product-item new-item">
             <div class="selection-menu">
               <img src="img/itemc4.jpg" width="360" height="380" alt="Селфи-палка Следуй за мной">
-              <button class="button cart" type="button">В корзину</button>
-              <button class="compare-button" type="button" name="button">Добавить к сравнению</button>
+              <a class="button cart" href="#">В корзину</a>
+              <a class="compare-button" href="#">Добавить к сравнению</a>
             </div>
             <a href="#">
               <h4>
@@ -291,6 +291,5 @@
     </div>
   </div>
 </footer>
-<script src="js/script.min.js"></script>
 </body>
 </html>
