--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 <body class="page-not-logged">
 <header class="main-header container">
-  <div class="main-header-background main-header-background-index"></div>
-  <nav class="main-navigation">
-    <a class="header-logo index-logo" href="index.html">Device</a>
+  <nav class="main-navigation index-header">
+    <a class="header-logo index-logo">Device</a>
     <form class="search" action="https://echo.htmlacademy.ru" method="get">
       <input id="search-site" type="search" name="search" placeholder="Поиск по сайту">
       <label for="search-site">
@@ -249,7 +248,7 @@
           <span class="visually-hidden">Закрыть</span>
         </button>
       </div>
-      <a class="button write-us-button" href="#writeus.html">Напишите нам</a>
+      <a class="button write-us-button" href="/writeus.html">Напишите нам</a>
     </section>
   </div>
 </main>
